# sunshine-app-2

./: .gitignore  CALENDAR_COMPARISON.md  CHAT_SETUP_GUIDE.md  CHAT_SYSTEM_DOCUMENTATION.md  CLAUDE.md  DATABASE_MIGRATION_CHAT.md  DATABASE_SCHEMA.md  DB_MIGRATION_LOG.md  EMAIL_TESTING.md  IMAGE_OPTIMIZATION_PROGRESS.md  MIGRATION_PLAN.md  NATIVE_APP_DEPLOYMENT.md  NEXT_SESSION_CONTEXT.md  PROGRESS.md  README.md  TEAM_BRIEF_REDESIGN.md  USER_FLOW_DIAGRAMS.md  WEBHOOK_SETUP.md  capacitor.config.ts  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  role_change_audit_table.sql  server.js  tailwind.config.ts  tsconfig.json  vercel.json
sunshine-main/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.prod.yml  docker-compose.yml  package-lock.json
sunshine-main/.github/workflows/: deploy.yml
sunshine-main/.sqlx/: query-2c55690dbc1f1e11c89dd6066ec36fd75cb8eadac8e1b41f9df167429579f232.json
sunshine-main/docs/: CACHING_SUMMARY.md  caching-strategy.md  deployment.md  pwa-roadmap.md  shift-search-plan.md  volunteer-application-restrictions.md
sunshine-main/migrations/: 0001_extensions.sql  0002_users_auth.sql  0003_taxonomy.sql  0004_regions.sql  0005_volunteers.sql  0006_agencies.sql  0007_shifts.sql  0008_surveys_assets.sql  0009_notifications.sql  0010_volunteer_events.sql  0011_dog_applications.sql  0012_message_center.sql  0013_dog_gender.sql  0014_volunteer_joined_at.sql  0015_survey_reviews.sql  0016_cancellation_reasons.sql  0017_shift_invites.sql  0018_gallery.sql  0019_shift_change_requests.sql  0020_add_agency_visibility.sql  0021_add_agency_id_to_assets.sql  0022_add_shift_event_types.sql  0023_add_change_request_event_types.sql  0024_assessment_scheduling.sql  0025_add_assessment_alert_type.sql  0026_add_app_id_to_alerts.sql  0027_add_dog_app_event_types.sql  0028_assessment_attendance.sql  0030_dog_dob.sql  0031_add_dog_retired_event_type.sql  0032_add_agency_survey_photos.sql  0033_add_agency_suggestions.sql  0034_feedback_dismissed.sql  0035_dog_photos.sql  0036_volunteer_applications.sql  0037_volunteer_app_event_types.sql  0038_users_email_verified.sql  0039_invite_link_message.sql  0040_note_versions.sql  0041_note_event_types.sql  (+20 more)
sunshine-main/scripts/: dev-start.sh  dokploy-setup-db.sh  ensure-db.sh  entrypoint.sh
sunshine-main/seed/: toronto_zone_assignments.json
sunshine-main/src/: cache.rs  config.rs  db.rs  email.rs  errors.rs  geocoding.rs  main.rs  security.rs
sunshine-main/src/auth/: clerk.rs  impersonate.rs  magic_link.rs  mod.rs  passkey.rs  session.rs  volunteer_status.rs
sunshine-main/src/jobs/: calendar_refresh.rs  mod.rs  survey_trigger.rs
sunshine-main/src/models/: agency.rs  calendar.rs  dog.rs  (+10 more)
sunshine-main/static/: manifest.json  offline.html  sw.js
sunshine-main/templates/: base.html.tera  error.html.tera
(+377 files in other folders)
