[package]
name = "sunshine"
version = "0.1.0"
edition = "2021"
description = "Volunteer Shift Management Platform"

[features]
dev-routes = []

[[bin]]
name = "sunshine"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[[bin]]
name = "migrate_to_s3"
path = "src/bin/migrate_to_s3.rs"

[[bin]]
name = "manage"
path = "src/bin/manage.rs"

[dependencies]
# Web framework
rocket = { version = "0.5", features = ["json", "secrets", "uuid"] }
rocket_db_pools = { version = "0.1", features = ["sqlx_postgres"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

# Auth — Passkeys (WebAuthn)
# danger-allow-state-serialisation lets us store challenge state in encrypted cookies
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }

# Auth — JWT for magic links
jsonwebtoken = "9"

# Auth — Password hashing (for any future use)
argon2 = "0.5"

# Email
lettre = { version = "0.11", features = [
    "smtp-transport",
    "tokio1-native-tls",
    "builder",
] }

# Templating (Tera via Rocket's official integration)
rocket_dyn_templates = { version = "0.1", features = ["tera"] }

# Config / env
dotenvy = "0.15"
figment = { version = "0.10", features = ["toml", "env"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Compression (DB backup)
flate2 = "1"

# Random / crypto
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

# CSV parsing (for bulk invite)
csv = "1"

# GeoJSON parsing (for region seeding)
geojson = "0.24"

# Recurrence rules (RFC 5545 RRULE)
rrule = "0.14"

# URL parsing
url = "2.5"

# HTTP client (for fetching open data on first run)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async trait support
async-trait = "0.1"

# Image processing (thumbnails)
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

# S3 / Cloudflare R2 storage (AWS SDK — works with custom endpoints)
aws-sdk-s3 = { version = "1", features = ["rt-tokio", "behavior-version-latest"] }
aws-config = { version = "1", features = ["rt-tokio", "behavior-version-latest"] }
aws-credential-types = "1"

# System metrics (admin dashboard)
sysinfo = "0.30"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
